--- a/_data/code.yaml
+++ b/_data/code.yaml
@@ -7,5 +7,8 @@
   name: script2.py
   desc: >
     Yet another script that does something-or-other.
-
+- script:
+  name: script9.3.py
+  desc: >
+    Script to process caulobacter growth data and compute MLE's with CI's and AIC.
 
