--- a/_data/figures.yaml
+++ b/_data/figures.yaml
@@ -1,43 +1,94 @@
 - fig:
-  title: "Fig. 1: Paleo cardigan kombucha, pickled brunch shabby chic "
+  title: "Fig. 1: Bacterial growth across time. "
   filename: script1.py
-  desc:  Used to generate the figure1
-  pic: fig1.png
+  desc:  Used to generate Figure 1 after running main() from script9.3.py.
+  pic: bokeh_plot-22.png
   req:
     - ds: 
       storage: remote
-      title: Dataset 1
-      link: "http://data.caltech.edu"
+      title: Iyer-Biswas et al. Dataset
+      link: "https://s3.amazonaws.com/bebi103.caltech.edu/data/caulobacter_growth_events.csv"
 
 - fig:
-  title: "Fig. 2: Activated charcoal tilde kombucha. "
+  title: "Fig. 2: Growth time-normalized bacterial growth data. "
   filename: script2.py
   desc: 
-      Used to generate Figure 2, illustrating activated kombucha on tap.
-  pic: fig2.png
+      Used to generate Figure 2 after running main() from script9.3.py.
+  pic: bokeh_plot-23.png
   req:
     - ds:
-      title: Kombucha tempura desconstructed measures
-      storage: local 
-      link: dataset2.csv
-    - ds: 
-      storage: local
-      title: Gravitational wave lo-fi beats to chill and study to
-      link: dataset2.csv
-
-- fig: 
-  title: "Fig. 5: Sustainable pour-over VHS"
-  filename: script1.py
-  desc:
-        Used to generate Figure 5, 
-  pic: fig3.png
-  req:
-    - ds:
-      title: Summarized dataset 1
-      storage: local
-      link: dataset1.csv
-
-    - ds:
-      title: Summarized dataset 2
       storage: remote
-      link: "http://zenodo.org" 
+      title: Iyer-Biswas et al. Dataset
+      link: "https://s3.amazonaws.com/bebi103.caltech.edu/data/caulobacter_growth_events.csv"
+
+- fig:
+  title: "Fig. 3: MLE's with 95% CI for parameters from the linear model."
+  filename: script3.py
+  desc:
+      Used to generate Figure 3 after running main() from script9.3.py.
+  pic: bokeh_plot-16.png
+  req:
+    - ds:
+      storage: remote
+      title: Iyer-Biswas et al. Dataset
+      link: "https://s3.amazonaws.com/bebi103.caltech.edu/data/caulobacter_growth_events.csv"
+
+- fig:
+  title: "Fig. 4: MLE's with 95% CI for parameters from the exponential model. "
+  filename: script4.py
+  desc:
+      Used to generate Figure 4 after running main() from script9.3.py.
+  pic: bokeh_plot-17.png
+  req:
+    - ds:
+      storage: remote
+      title: Iyer-Biswas et al. Dataset
+      link: "https://s3.amazonaws.com/bebi103.caltech.edu/data/caulobacter_growth_events.csv"
+
+- fig:
+  title: "Fig. 5: AIC comparison of linear and exponential models. "
+  filename: script5.py
+  desc:
+      Used to generate Figure 5 after running main() from script9.3.py.
+  pic: bokeh_plot-18.png
+  req:
+    - ds:
+      storage: remote
+      title: Iyer-Biswas et al. Dataset
+      link: "https://s3.amazonaws.com/bebi103.caltech.edu/data/caulobacter_growth_events.csv"
+
+- fig:
+  title: "Fig. 6: Linear/exponential AIC ratio for each growth event. "
+  filename: script6.py
+  desc:
+      Used to generate Figure 6 after running main() from script9.3.py.
+  pic: bokeh_plot-19.png
+  req:
+    - ds:
+      storage: remote
+      title: Iyer-Biswas et al. Dataset
+      link: "https://s3.amazonaws.com/bebi103.caltech.edu/data/caulobacter_growth_events.csv"
+
+- fig:
+  title: "Fig. 7: AIC weight for each growth event in the linear model. "
+  filename: script7.py
+  desc:
+      Used to generate Figure 7 after running main() from script9.3.py.
+  pic: bokeh_plot-20.png
+  req:
+    - ds:
+      storage: remote
+      title: Iyer-Biswas et al. Dataset
+      link: "https://s3.amazonaws.com/bebi103.caltech.edu/data/caulobacter_growth_events.csv"
+
+- fig:
+  title: "Fig. 8: AIC weight for each growth event in the exponential model."
+  filename: script8.py
+  desc:
+      Used to generate Figure 8 after running main() from script9.3.py.
+  pic: bokeh_plot-21.png
+  req:
+    - ds:
+      storage: remote
+      title: Iyer-Biswas et al. Dataset
+      link: "https://s3.amazonaws.com/bebi103.caltech.edu/data/caulobacter_growth_events.csv" 
