--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: Modeling individual Caulobacter growth
 email: jjfox@caltech.edu
 description: >- # this means to ignore newlines until "baseurl:"
   Website for BeBi103a homework 9.3.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/bebi103a_website" # the subpath of your site, e.g. /blog
+url: "https://jjfox25.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username:
 github_username:  jfox25
 
