--- a/_data/about.yaml
+++ b/_data/about.yaml
@@ -40,4 +40,4 @@ Summary:  >
 
 Acknowledgments: > 
   We thank Dr. Justin Bois for his teaching and expertise. We also thank Iyer-Biswas
-  for making their data publicly available.
+  for making their data publicly available. Finally, we thank Griffin Chure for providing the website template.
